# Single-Cycle-Computer

./: Dockerfile  Project Two SCC.docx  README.md  SCC Check sheet.xlsx  ~$oject Two SCC.docx
Documentation/: scc.docx  theBible.json
SingleCycleComputer/: ARM Reference_Manual.docx  DataPath.v  DataPath.vpp  DataPath_test.v  InstructionDecoder.v  InstructionDecoder_tb.v  LogicalImmediate.h  NewALU_testbench.v  SCC_HEADER.vh  dump.lx2
SingleCycleComputer/Documentation/: Class Instruction Set Architecture.docx  Contributions.md  Instruction_Decode_Writeup.md  Instructions.txt  SCC_Discrepancy_Log.md  assembler_fixes.md  instructions.json  scc_rev_1.docx
SingleCycleComputer/Documentation/InstructionDecoderJupyterGenerator/: ID.ipynb  core.csv
SingleCycleComputer/Educore-SingleCycle/: NewALU.v  SSCRegisterBank.v  SSCRegisterBank.vvp  SSCRegisterBank_tb.v  SSCRegisterBank_tb.vvp  file_list.txt  test_newALU.vvp
SingleCycleComputer/Educore-SingleCycle/FINAL_SCC/: Core.v  DataPath.v  EXE.v  IO.v  IO_test.v  InstructionDecoder.v  InstructionFetch.v  Instruction_and_data.v  Makefile  MemoryAccess.v  RegisterBank.v  SSC_HEADER.vh  WriteBack.v  data.mem  debug3.gtkw  dump.lx2  fifo.vvp  fifo6.vvp  output.txt  wave.gtkw
SingleCycleComputer/InstructionFetch/: IF.v  IF.vvp
SingleCycleComputer/src/: Data_mem.v  Data_mem_tb.v  In_mem.v  In_mem_tb.v  Mem_Module.v  dump.lx2  fifo.vvp  instructions.mem  mem.py  mem.vvp  mem_dump.txt  output.lst  test_read3.v
emulator/: Cargo.toml
emulator/src/: emulator.rs  main.rs  ui.rs
testFiles/: BubbleSort.asm  output.lst
(+17 files in other folders)
