[package]
name = "Class-ISA-Emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
tui = "0.19"
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.25", optional = false }
serde = { version = "1", optional = true, features = ["derive"]}